# AltEx-BE

./: .gitignore  README.md  pyproject.toml
analysis/: analysis_exon.py  analysis_sequence.py  analysis_sgrna.py  analysis_sgrna_v2.py  analysis_sgrna_v3.py
docs/: consept.md  roadmap.md  temp.md  todo.md
script/: analysis_exon.py  analysis_sequence.py  exon_analysis.ipynb  exon_analysis.py  run_bed_for_ucsc_custom_track_maker.py  run_cassette_exon_extraction.py  run_exon_type_annotator.py  run_extract_skipped_or_unique_exon_to_BED.py  run_offtarget_scorer.py  run_output_formatter.py  run_preprocess_and_additional_annotation.py  run_refflat_preprocessor.py  run_refflat_to_single_exon_BED.py  run_sequence_annotation.py  run_sequence_annotator.py  run_sgRNA_designer.py  run_sgrna_designer.py  run_splice_event_annotator.py  run_splice_event_classifier.py  run_splicing_event_classifier.py  run_target_exon_extractor.py  run_with_all_genes.py
src/: cassette_exon_extraction.py  exon_type_annotator.py  extract_skipped_or_unique_exon_to_BED.py  preprocess_and_additional_annotation.py  refflat_to_single_exon_BED.py  sequence_annotation.py
tests/: cassette_exon_extraction_test.py  classify_exon_type_test.py  classify_exons_per_gene_test.py  modify_refflat_test.py  test_argument_manage.py  test_bed_for_ucsc_custom_track_maker.py  test_cli_setting.py  test_exon_type_annotator.py  test_extract_skipped_or_unique_exon_to_BED.py  test_gtf2refflat_converter.py  test_offtarget_scorer.py  test_output_formatter.py  test_parse_arguments.py  test_preprocess_and_additional_annotation.py  test_refflat_preprocessor.py  test_refflat_to_single_exon_BED.py  test_sequence_annotation.py  test_sequence_annotator.py  test_sgRNA_designer.py  test_sgrna_designer.py  test_sgrna_prioritizer.py  test_splice_event_classifier.py  test_target_exon_extractor.py  (+2 more)
(+43 files in other folders)
