[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "AltEx-AID"
version = "0.1"
description = "automatically design sgRNA for exon skipping with target-AID"
authors = ["Kinari Matsumoto<matsumoto.kinari.qm@alumni.tsukuba.ac.jp>"]
readme = "README.md"
homepage = "https://github.com/kinari-labwork/AltEx-AID"
license = "MIT"
packages =[{ include = "AltEx-AID", from ="src"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"

[tool.poetry.scripts]
AltEx-AID = "AltEx-AID.main:execute"