[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "AltEx-BE"
version = "0.1"
description = "automatically design sgRNA for exon skipping with many base editors"
authors = ["Kinari Matsumoto <matsumoto.kinari.qm@alumni.tsukuba.ac.jp>"]
readme = "README.md"
homepage = "https://github.com/kinari-labwork/AltEx-BE"
license = "MIT"
packages = [{ include = "altex_aid", from = "src"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pybedtools = "^0.12.0"

[tool.poetry.scripts]
altex-aid = "altex_aid.main:main"